// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentRefinedValues renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisCurrentRefinements]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-current-refinements>
      
      
      
      <div
        class="ais-CurrentRefinements"
      >
        
        
        
        
  
        
        <ul
          class="ais-CurrentRefinements-list"
        >
          
          
          
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <button
              class="ais-CurrentRefinements-button"
            >
              
              
              <span
                class="ais-CurrentRefinements-label"
              >
                Canon
              </span>
              
              
              
              <span
                class="ais-CurrentRefinements-count"
              >
                
                27
              
              </span>
              
              
              <span
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </span>
              
            
            </button>
            
          
          </li>
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <button
              class="ais-CurrentRefinements-button"
            >
              
              
              <span
                class="ais-CurrentRefinements-label"
              >
                Sony
              </span>
              
              
              
              <span
                class="ais-CurrentRefinements-count"
              >
                
                28
              
              </span>
              
              
              <span
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </span>
              
            
            </button>
            
          
          </li>
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <button
              class="ais-CurrentRefinements-button"
            >
              
              
              <span
                class="ais-CurrentRefinements-label"
              >
                Cameras & Camcorders
              </span>
              
              
              
              <span
                class="ais-CurrentRefinements-count"
              >
                
                55
              
              </span>
              
              
              <span
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </span>
              
            
            </button>
            
          
          </li>
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <button
              class="ais-CurrentRefinements-button"
            >
              
              
              <span
                class="ais-CurrentRefinements-label"
              >
                ≥ 0
              </span>
              
              
              
              
              
              <span
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </span>
              
            
            </button>
            
          
          </li>
          
        
        </ul>
        
  
        
        
        <button
          class="ais-CurrentRefinements-reset"
        >
          
          Clear refinements
        
        </button>
        
      
      </div>
      
    
    </ng-ais-current-refinements>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`CurrentRefinedValues renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisCurrentRefinements]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-current-refinements>
      
      
      
      <div
        class="ais-CurrentRefinements"
      >
        
        
        
        
  
        
        <ul
          class="ais-CurrentRefinements-list"
        >
          
          
          
          
        
        </ul>
        
  
        
        
        <button
          class="ais-CurrentRefinements-reset"
        >
          
          Clear refinements
        
        </button>
        
      
      </div>
      
    
    </ng-ais-current-refinements>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`CurrentRefinedValues should apply \`transformItems\` if specified 1`] = `
<ng-component
  testedWidget={[Function NgAisCurrentRefinements]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-current-refinements>
      
      
      
      <div
        class="ais-CurrentRefinements"
      >
        
        
        
        
  
        
        <ul
          class="ais-CurrentRefinements-list"
        >
          
          
          
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <button
              class="ais-CurrentRefinements-button"
            >
              
              
              <span
                class="ais-CurrentRefinements-label"
              >
                foo - Canon
              </span>
              
              
              
              <span
                class="ais-CurrentRefinements-count"
              >
                
                27
              
              </span>
              
              
              <span
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </span>
              
            
            </button>
            
          
          </li>
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <button
              class="ais-CurrentRefinements-button"
            >
              
              
              <span
                class="ais-CurrentRefinements-label"
              >
                foo - Sony
              </span>
              
              
              
              <span
                class="ais-CurrentRefinements-count"
              >
                
                28
              
              </span>
              
              
              <span
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </span>
              
            
            </button>
            
          
          </li>
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <button
              class="ais-CurrentRefinements-button"
            >
              
              
              <span
                class="ais-CurrentRefinements-label"
              >
                foo - Cameras & Camcorders
              </span>
              
              
              
              <span
                class="ais-CurrentRefinements-count"
              >
                
                55
              
              </span>
              
              
              <span
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </span>
              
            
            </button>
            
          
          </li>
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <button
              class="ais-CurrentRefinements-button"
            >
              
              
              <span
                class="ais-CurrentRefinements-label"
              >
                foo - ≥ 0
              </span>
              
              
              
              
              
              <span
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </span>
              
            
            </button>
            
          
          </li>
          
        
        </ul>
        
  
        
        
        <button
          class="ais-CurrentRefinements-reset"
        >
          
          Clear refinements
        
        </button>
        
      
      </div>
      
    
    </ng-ais-current-refinements>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`CurrentRefinedValues should be hidden with \`autoHideContainer\` 1`] = `
<ng-component
  testedWidget={[Function NgAisCurrentRefinements]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-current-refinements>
      
      
      
      
    
    </ng-ais-current-refinements>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;
